# rust-kawaii

./: Cargo.toml
derive/: Cargo.toml
derive/src/: ast.rs  attr.rs  derive.rs  error.rs  lib.rs  parse.rs
examples/: basic.rs  override.rs  pretty.rs
src/: config.rs  document.rs  fmt.rs  lib.rs  traits.rs  util.rs
