[package]
name    = "kawaii"
version = "0.1.0-alpha"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Better pretty printing."
repository  = "https://github.com/meh/rust-kawaii"
keywords    = ["pretty", "kawaii", "print", "debug"]

[dependencies]
ansi_term = "0.10"
typemap = "0.3"
unicode-segmentation = "1"
itertools = "0.7"
term_size = "0.3"

[features]
unstable = []
