[package]
name    = "kawaii"
version = "0.1.0-alpha"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Better pretty printing."
repository  = "https://github.com/meh/rust-kawaii"
keywords    = ["pretty", "kawaii", "print", "debug"]

[dependencies]
itertools = "0.7"
unicode-segmentation = "1"

typemap = "0.3"
fnv = "1.0"

ansi_term = "0.10"
term_size = "0.3"

[dev-dependencies]
kawaii-derive = { path = "derive" }
