[package]
name    = "kawaii-derive"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Better pretty printing."
repository  = "https://github.com/meh/rust-kawaii"
keywords    = ["pretty", "kawaii", "print", "debug"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
itertools = "0.7"

ansi_term = "0.10"
nom = "3.2"
